--- a/gabia/css/style.css
+++ b/gabia/css/style.css
@@ -2,7 +2,7 @@
 
 body{font-family: 'Noto Sans KR', sans-serif;}
 
-.slider01 .swiper-horizontal>.swiper-pagination-bullets, 
+.slider01.swiper-horizontal>.swiper-pagination-bullets, 
 .swiper-pagination-bullets.swiper-pagination-horizontal, 
 .swiper-pagination-custom, .swiper-pagination-fraction {
     bottom: 40px;
@@ -18,10 +18,242 @@ body{font-family: 'Noto Sans KR', sans-serif;}
 .slider01 .swiper-pagination-bullet-active{
     width: 30px;
     border-radius: 6px; background: #fff;
-    border: 1px solid transparent; }
+    border: 1px solid transparent;
+}
+
+/* header start */
+
+#header{border-bottom: 1px solid #eee;width: 100%;}
+#header .headerWrap{
+    max-width: 1440px;height: 60px;width: 100%;
+    margin: 0 auto;padding: 0 20px;
+    display: flex;justify-content: space-between;align-items: center;
+}
+#header .headerWrap h1{
+    width: 168px;height: 35px;
+    background: url(../images/mainlogo.png) no-repeat center;
+    text-indent: -9999px;
+}
+#header .headerWrap ul>li{float: left;margin: 0 15px;}
+#header .headerWrap ul>li a{
+    display: block;text-align: center;line-height: 60px;
+    font-size: 15px;letter-spacing:-0.75px;color: #333333;
+    padding: 0 15px;position: relative;
+}
+#header .headerWrap ul>li a:after{
+    content: "";position: absolute;bottom: -1px;left: 50%;
+    transform: translateX(-50%);
+    border-bottom: 2px solid #2598e8;
+    transition: 0.3s;width: 0;
+}
+#header .headerWrap ul>li:hover a:after{
+    width: 100%;
+}
+.toggle{display: none;}
+
+/* slider start */
+.swiper-slide{
+    position: relative;height: 643px;
+    overflow: hidden;}
+.swiper-slide>img{
+    display: block;
+    transform-origin:center bottom;
+    _max-width: 1924px;height: 643px;width: 100%;
+}
+.txtWrap01{
+    position: absolute;top: 0;_left:calc(50% - 700px);left: 260px;
+    padding-top: 60px;margin-top: 120px;
+    color: white;letter-spacing:-0.75px;
+}
+.txtWrap01 img{
+    position: absolute;top: 0;left: 0;
+}
+.txtWrap01 h3{font-size:50px;font-weight: 500;margin-bottom: 24px;line-height: 60px;}
+.txtWrap01 p{font-size:19px;font-weight: 200;margin-bottom: 45px;}
+.txtWrap01 .btn{
+    padding: 0 39px;
+    border: 1px solid #fff;
+    border-radius: 24px;
+    width: 168px;height: 48px;min-width:168px;
+    cursor: pointer;transition: 0.3s;
+}
+.txtWrap01 .btn a{
+    text-align: center;display: block;line-height: 46px;
+    font-size: 15px;font-weight: 300;color: #fff;
+}
+.txtWrap01 .btn:hover{background: #fff;}
+.txtWrap01 .btn:hover a{color: #333;}
+
+/* section1 start */
+#section1{padding: 130px 0;}
+.sec1U_Wrap{
+    max-width: 1440px;width: 100%;
+    margin: 0 auto;padding: 0 20px;
+    position: relative;
+}
+.sec1U_Wrap h3{
+    margin-bottom: 119px;
+    font-weight: 700;font-size: 40px;
+    line-height: 56px;text-align: center;
+    letter-spacing: -0.03em;color: #333333;
+}
+.sec1U_Wrap ul{margin: 0 30px;}
+.sec1U_Wrap li{float: left;}
+.sec1U_Wrap li:first-child{margin-right: 179px;}
+.sec1U_Wrap li .u_left{float: left;}
+.sec1U_Wrap li img{
+    width: 161px;height: 161px;background: #f6f6f6;
+    border-radius: 50%;margin-right: 39px;
+}
+.sec1U_Wrap li .u_right{
+    float: left;height: 161px;
+    padding: 28px 0;
+}
+.sec1U_Wrap li .u_right h2{
+    margin-bottom: 20px;
+    font-weight: 500;font-size: 22px;
+    line-height: 31px;letter-spacing: -0.035em;color: #333333;
+    position: relative;
+}
+.sec1U_Wrap li .u_right h2:after{
+    content: "";width: 7px;height: 13px;
+    background-image: url(../images/moreicon.png);
+    position: absolute;top: 10px;margin-left: 9px;
+}
+.sec1U_Wrap li .u_right p{
+    font-weight: 100;font-size: 18px;
+    line-height: 27px;letter-spacing: -0.04em;color: #7C7C7C;
+}
+
+.sec1B_Wrap{
+    max-width: 1440px;width: 100%;
+    margin: 0 auto;margin-top: 130px;
+    padding: 0 20px;position: relative;
+}
+.sec1B_Wrap h3{
+    margin-bottom: 119px;
+    font-weight: 700;font-size: 40px;
+    line-height: 56px;text-align: center;
+    letter-spacing: -0.03em;color: #333333;
+    padding-top: 100px;
+    border-top: 1px solid #dedede;
+}
+.sec1B_Wrap ul{margin: 0 30px;}
+.sec1B_Wrap li{float: left;}
+.sec1B_Wrap li:first-child{margin-right: 67px;}
+.sec1B_Wrap li .u_left{float: left;}
+.sec1B_Wrap li img{
+    width: 161px;height: 161px;background: #f6f6f6;
+    border-radius: 50%;margin-right: 39px;
+}
+.sec1B_Wrap li .u_right{
+    float: left;height: 161px;
+    padding: 28px 0;
+}
+.sec1B_Wrap li .u_right h2{
+    margin-bottom: 20px;
+    font-weight: 500;font-size: 22px;
+    line-height: 31px;letter-spacing: -0.035em;color: #333333;
+    position: relative;
+}
+.sec1B_Wrap li .u_right h2:after{
+    content: "";width: 7px;height: 13px;
+    background-image: url(../images/moreicon.png);
+    position: absolute;top: 10px;margin-left: 9px;
+}
+.sec1B_Wrap li .u_right p{
+    font-weight: 100;font-size: 18px;
+    line-height: 27px;letter-spacing: -0.04em;color: #7C7C7C;
+}
+
+/* section2 start */
+#section2{background: #f6f6f6;padding: 100px 0;}
+.sec2_Wrap{
+    max-width: 1440px;width: 100%;
+    margin: 0 auto;padding: 0 20px;
+}
+.sec2_Wrap h3{
+    font-weight: 700;font-size: 40px;
+    line-height: 56px;
+    letter-spacing: -0.03em;color: #333333;
+    display: inline-block;
+}
+.sec2_Wrap ul{float: right;width: 990px;height: 432px;}
+.sec2_Wrap li{
+    width: 488px;height: 130px;
+    float: left;background: white;
+    margin: 7px 0;margin-right: 14px;
+    position: relative;border-radius: 4px;
+}
+.sec2_Wrap li:nth-child(2n){margin-right: 0;}
+.sec2_Wrap li:nth-child(5){width: 100%;height: 130px;}
+
+.sec2_Wrap li p{
+    font-weight: 100;font-size: 18px;
+    line-height:27px;letter-spacing: -0.04em;color: #7C7C7C;
+}
+.sec2_Wrap li img, .sec2_Wrap li p{float: left;position: absolute;}
+.sec2_Wrap li img{top: 29px;}
+.sec2_Wrap li p{top: 38px;}
+
+.sec2_Wrap li:nth-child(1) img{left: 45px;}
+.sec2_Wrap li:nth-child(2) img{left: 38px;}
+.sec2_Wrap li:nth-child(3) img{left: 81px;}
+.sec2_Wrap li:nth-child(4) img{left: 38px;}
+.sec2_Wrap li:nth-child(5) img{left: 57px;}
+
+.sec2_Wrap li:nth-child(1) p{right: 28px;}
+.sec2_Wrap li:nth-child(2) p{right: 24px;top: 25px;}
+.sec2_Wrap li:nth-child(3) p{right: 82px;}
+.sec2_Wrap li:nth-child(4) p{right: 129px;}
+.sec2_Wrap li:nth-child(5) p{right: 246px;}
+
+/* section3 start */
+#section3{
+    padding: 80px 0;
+    background: url(../images/bg_ask.jpg) no-repeat center;
+}
+.sec3_Wrap{
+    max-width: 1440px;width: 100%;
+    margin: 0 auto;padding: 0 20px;
+}
+.sec3_Wrap h3{
+    font-weight: 700;font-size: 40px;
+    line-height: 56px;text-align: center;
+    letter-spacing: -0.03em;color: #fff;
+    margin-bottom: 22px;
+}
+.sec3_Wrap p{
+    font-weight: 100;font-size: 20px;
+    line-height: 30px;letter-spacing: -0.04em;
+    color: #FFFFFF;text-align: center;
+    margin-bottom: 12px;
+}
+.sec3_Wrap h4{
+    font-weight: 500;font-size: 40px;
+    line-height: 56px;letter-spacing: -0.025em;
+    color: #FFFFFF;text-align: center;
+    margin-bottom: 25px;
+}
+.sec3_Wrap button{
+    width: 168px;height: 48px;background: #2598E8;
+    border: 1px solid #FFFFFF;border-radius: 24px;
+    position: relative;left: 50%;
+    transform: translateX(-50%);
+    transition: 1s;
+}
+.sec3_Wrap button p{
+    font-weight: 300;font-size: 15px;
+    line-height:48px;letter-spacing: -0.04em;
+    color: #FFFFFF;transition: 1s;
+}
+.sec3_Wrap button:hover{background: #fff;}
+.sec3_Wrap button:hover p{color: #2598E8;}
+
+
 
 /* mobile */
-@media screen and (max-width: 767px){
+/* @media screen and (max-width: 767px){
     #header{
         height: 50px;padding: 10px 0;
     }
@@ -39,71 +271,12 @@ body{font-family: 'Noto Sans KR', sans-serif;}
     #header .headerWrap ul>li{
         display: none;
     }
-}
+} */
 /* mobile */
 
 /* pc */
 @media screen and (min-width:768px){
     /* header */
-    #header{border-bottom: 1px solid #eee;width: 100%;}
-    #header .headerWrap{
-        max-width: 1440px;height: 60px;width: 100%;
-        margin: 0 auto;padding: 0 20px;
-        display: flex;justify-content: space-between;align-items: center;
-    }
-    #header .headerWrap h1{
-        width: 168px;height: 35px;
-        background: url(../images/mainlogo.png) no-repeat center;
-        text-indent: -9999px;
-    }
-    #header .headerWrap ul>li{float: left;margin: 0 15px;}
-    #header .headerWrap ul>li a{
-        display: block;text-align: center;line-height: 60px;
-        font-size: 15px;letter-spacing:-0.75px;color: #333333;
-        padding: 0 15px;position: relative;
-    }
-    #header .headerWrap ul>li a:after{
-        content: "";position: absolute;bottom: -1px;left: 50%;
-        transform: translateX(-50%);
-        border-bottom: 2px solid #2598e8;
-        transition: 0.3s;width: 0;
-    }
-    #header .headerWrap ul>li:hover a:after{
-        width: 100%;
-    }
-    .toggle{display: none;}
-
-    /* slider */
-    .swiper-slide{
-        position: relative;height: 643px;
-        overflow: hidden;}
-    .swiper-slide>img{
-        display: block;
-        transform-origin:center bottom;
-        _max-width: 1924px;height: 643px;width: 100%;
-    }
-    .txtWrap01{
-        position: absolute;top: 0;_left:calc(50% - 700px);left: 260px;
-        padding-top: 60px;margin-top: 120px;
-        color: white;letter-spacing:-0.75px;
-    }
-    .txtWrap01 img{
-        position: absolute;top: 0;left: 0;
-    }
-    .txtWrap01 h3{font-size:50px;font-weight: 500;margin-bottom: 24px;line-height: 60px;}
-    .txtWrap01 p{font-size:19px;font-weight: 200;margin-bottom: 45px;}
-    .txtWrap01 .btn{
-        padding: 0 39px;
-        border: 1px solid #fff;
-        border-radius: 24px;
-        width: 168px;height: 48px;min-width:168px;
-        cursor: pointer;transition: 0.3s;
-    }
-    .txtWrap01 .btn a{
-        text-align: center;display: block;line-height: 46px;
-        font-size: 15px;font-weight: 300;color: #fff;
-    }
-    .txtWrap01 .btn:hover{background: #fff;}
-    .txtWrap01 .btn:hover a{color: #333;}
+    
 }
 /* pc */
