--- a/company/css/style.css
+++ b/company/css/style.css
@@ -4,13 +4,22 @@ html,body{height: 100%;}
 /* common */
 #header_top .logo{background: salmon;height: 50px;padding: 0 10px;}
 
+.bx-wrapper {margin-bottom: 0;}
+
 .sliderWrap .slideTxt{
     position: absolute;left: 50%;top: 30%;
     transform: translate(-50%,-50%);
     width: 500px;
 }
 .sliderWrap .slideTxt h3{font-size: 3em;}
+.sliderWrap .nextBtn,
+.sliderWrap .prevBtn{
+    position: absolute;top: 50%;transform: translateY(-50%);
+    cursor: pointer;
+}
 
+.sliderWrap .nextBtn{right: 30px;}
+.sliderWrap .prevBtn{left: 30px;}
 
 
 
@@ -37,6 +46,16 @@ html,body{height: 100%;}
     }
     .sliderWrap .li_1st{background-image: url(../images/mainimg01.jpg);}
     .sliderWrap .li_2st{background-image: url(../images/mainimg02.jpg);}
+    .sliderWrap .bx-wrapper .bx-pager{bottom: 400px;}
+    .sliderWrap .bx-wrapper .bx-pager.bx-default-pager a{
+        border: 2px solid #fff;background: none;transition: 0.3s;
+    }
+    .sliderWrap .bx-wrapper .bx-pager.bx-default-pager a.active{
+        background: white;width: 40px;height: 10px;
+    }
+    .sliderWrap .bx-wrapper .bx-pager.bx-default-pager a:hover{
+        background: #000;border: 1px solid #000;
+    }
 }/* pc media end */
 
 
@@ -45,20 +64,36 @@ html,body{height: 100%;}
     #main_header{background: #ddd;}
 
     #header_top{
-        background: pink;padding: 0 16px;z-index: 1;
+        background: pink;padding: 0 16px;z-index: 99999;
         position: fixed;width: 100%;
         display: flex;justify-content: space-between;align-items: center;
     }
 
-    #header_top .gnb{display: none;}
+    #header_top .gnb{
+        position: fixed;width: 100%;height: 100%;background: salmon;
+        left: -100%;top:0;z-index: 1;transition: 0.3s;
+        display: flex;justify-content: center;align-items: center;text-align: center;
+    }
+    #header_top .gnb.view{left: 0;}
+    #header_top .gnb a{
+        line-height: 40px;font-size: 1.5em;font-weight: bold;color: white;
+        background: seagreen;width:200px;display: block;
+    }
+    #header_top .gnb li{margin-bottom: 15px;}
+
     .toggle{display: block;}
-    .toggle{width: 40px;height: 40px;background:sandybrown;position: relative;}
+    .toggle{width: 40px;height: 40px;background:sandybrown;position: relative;z-index: 2;}
     .toggle div{
         position: absolute;width: 25px;height: 3px;background: white;
         left: 50%;top:50%;transform: translate(-50%,-50%);
+        border-radius: 2px;transition: 0.3s;cursor: pointer;
     }
     .toggle .bar1{top: 10px;}
     .toggle .bar3{top: 30px;}
+
+    .toggle.active .bar1{transform: translate(-50%,-50%) rotate(45deg);top: 50%;}
+    .toggle.active .bar2{opacity: 0;}
+    .toggle.active .bar3{transform: translate(-50%,-50%) rotate(-45deg);top: 50%;}
 
     .sliderWrap .li_1st,.sliderWrap .li_2st{
         height: 100vh;
@@ -70,4 +105,13 @@ html,body{height: 100%;}
     .sliderWrap .li_2st{background-image: url(../images/mainimg02.jpg);}
     
     .sliderWrap .slideTxt{width: 300px;top: 50%;}
+    .sliderWrap .nextBtn,.sliderWrap .prevBtn{display: none;}
+    .bx-wrapper .bx-pager{bottom: 30px;}
+    .bx-wrapper .bx-pager.bx-default-pager a{
+        border: 2px solid #fff;background: none;transition: 0.3s;
+    }
+    .bx-wrapper .bx-pager.bx-default-pager a.active{
+        background: white;width: 40px;height: 10px;
+    }
+    .bx-wrapper .bx-pager.bx-default-pager a:hover{background: #000;border: 1px solid #000;}
 }/* mobile media end */
