--- a/04 kensington/css/style.css
+++ b/04 kensington/css/style.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 html,body{height: 100%;}
+body{font-family: 'Open Sans', sans-serif;}
 
 /* common */
 
@@ -8,11 +9,55 @@ html,body{height: 100%;}
 
 /* pc */
 @media screen and ( min-width:700px ){
-    
+    #main_header{height: 2007px;background: #ddd;}
+    #header_top{
+        width: 1240px;height: 50px;
+        position: fixed;left: 50%;transform: translateX(-50%);top: 39px;
+        display: flex;justify-content: space-between;align-items: center;
+    }
+    .toggle{display: none;}
+    #header_top .logo{
+        background-image: url(../images/main_logo.png);
+        width: 290px;height: 50px;
+    }
+    #header_top .logo a{
+        text-indent:9999px;display: block;
+    }
+    #header_top .gnb{
+        display: flex;justify-content: center;align-items:center;
+    }
+    #header_top .gnb .submenu>li{
+        float: left;height: 45px;margin-right: 30px;
+    }
+    #header_top .gnb .submenu>li:last-child{margin-right: 23px;}
+    #header_top .gnb .submenu>li>a{
+        display: block;text-align: center;
+        padding: 10px;font-weight: 400;
+        font-size: 18px;line-height: 25px;
+        letter-spacing: -0.12em;color: #333333;
+    }
+    .gnb .language .kor{
+        float: left;background: #B39579;width: 50px;
+    }
+    .gnb .language .eng{
+        float: right;width: 50px;height: 50px;
+        border: 2px solid #B39579;
+        background: rgba(51, 51, 51, 0.5);
+    }
+    .gnb .language a{
+        text-align: center;display: block;
+        font-weight: 600;
+        font-size: 14px;line-height: 50px;
+        letter-spacing: -0.12em;color: #FFFFFF;
+    }
+    .gnb .language .eng a{line-height: 46px;}
 }/* pc media end */
 
 
 /* mobile */
 @media screen and ( max-width:699px ){
-    
+    #main_header{background: pink;}
+    #header_top{
+        background: skyblue;padding: 0 20px;
+    }
 }/* mobile media end */
