--- a/company/css/style.css
+++ b/company/css/style.css
@@ -21,11 +21,30 @@ html,body{height: 100%;}
 .sliderWrap .nextBtn{right: 30px;}
 .sliderWrap .prevBtn{left: 30px;}
 
+.sliderWrap .bx-wrapper .bx-pager.bx-default-pager a.active{
+    background: white;width: 40px;height: 10px;
+}
+.sliderWrap .bx-wrapper .bx-pager.bx-default-pager a:hover{
+    background: #000;border: 1px solid #000;
+}
 
+.content>ul>li{float: left;width: 25%;height: 310px;background: orange;}
+.content>ul>li:nth-child(2n){background: skyblue;}
+.content>ul>li:nth-child(1){}
+.content>ul>li:nth-child(2){}
+.content>ul>li:nth-child(3){width: 50%;}
+.content>ul>li:nth-child(4){}
+.content>ul>li:nth-child(5){}
+.content>ul>li:nth-child(6){width: 50%;}
+.content>ul>li:nth-child(7){height: 620px;}
+.content>ul>li:nth-child(8){width: 50%;}
+.content>ul>li:nth-child(9){}
+.content>ul>li:nth-child(10){}
+.content>ul>li:nth-child(11){width: 50%;}
 
 /* pc */
 @media screen and ( min-width:700px ){
-    #main_header{height: 1950px;background: #ddd;}
+    #main_header{height: 1930px;background: #ddd;position: relative;}
 
     #header_top{
         width: 1240px;background: pink;z-index: 1;
@@ -44,18 +63,19 @@ html,body{height: 100%;}
         background-position: center;
         background-size: cover;
     }
+    .sliderWrap{position: relative;}
     .sliderWrap .li_1st{background-image: url(../images/mainimg01.jpg);}
     .sliderWrap .li_2st{background-image: url(../images/mainimg02.jpg);}
-    .sliderWrap .bx-wrapper .bx-pager{bottom: 400px;}
+    .sliderWrap .bx-wrapper .bx-pager{bottom: 331px;}
     .sliderWrap .bx-wrapper .bx-pager.bx-default-pager a{
         border: 2px solid #fff;background: none;transition: 0.3s;
     }
-    .sliderWrap .bx-wrapper .bx-pager.bx-default-pager a.active{
-        background: white;width: 40px;height: 10px;
+
+    .content{
+        width: 1240px;position: absolute;
+        left: 50%;transform: translateX(-50%);bottom: 0;
     }
-    .sliderWrap .bx-wrapper .bx-pager.bx-default-pager a:hover{
-        background: #000;border: 1px solid #000;
-    }
+
 }/* pc media end */
 
 
@@ -110,8 +130,19 @@ html,body{height: 100%;}
     .bx-wrapper .bx-pager.bx-default-pager a{
         border: 2px solid #fff;background: none;transition: 0.3s;
     }
-    .bx-wrapper .bx-pager.bx-default-pager a.active{
-        background: white;width: 40px;height: 10px;
-    }
-    .bx-wrapper .bx-pager.bx-default-pager a:hover{background: #000;border: 1px solid #000;}
+
+    .content{width: 100%;}
+    .content>ul>li{width: 50%;}
+
+    .content>ul>li:nth-child(1){}
+    .content>ul>li:nth-child(2){}
+    .content>ul>li:nth-child(3){}
+    .content>ul>li:nth-child(4){}
+    .content>ul>li:nth-child(5),
+    .content>ul>li:nth-child(6),
+    .content>ul>li:nth-child(7),
+    .content>ul>li:nth-child(8),
+    .content>ul>li:nth-child(9),
+    .content>ul>li:nth-child(10),
+    .content>ul>li:nth-child(11){display: none;}
 }/* mobile media end */
