--- a/company/css/reset.css
+++ b/company/css/reset.css
@@ -3,3 +3,4 @@
 li{list-style: none;}
 a:link,a:visited{text-decoration: none;color: #000;}
 .clearfix:after{content: "";display: block;clear: both;}
+img{display: block;}
