--- a/company/css/style.css
+++ b/company/css/style.css
@@ -28,19 +28,29 @@ html,body{height: 100%;}
     background: #000;border: 1px solid #000;
 }
 
-.content>ul>li{float: left;width: 25%;height: 310px;background: orange;}
+.content>ul{
+    display: flex;flex-wrap: wrap;
+}
+.content>ul>li{
+    /* float: left; */
+    width: 25%;height: 310px;background: orange;
+}
+
 .content>ul>li:nth-child(2n){background: skyblue;}
-.content>ul>li:nth-child(1){}
+.content>ul>li:nth-child(1){display: flex;justify-content: center;align-items: center;}
 .content>ul>li:nth-child(2){}
 .content>ul>li:nth-child(3){width: 50%;}
-.content>ul>li:nth-child(4){}
-.content>ul>li:nth-child(5){}
+.content>ul>li:nth-child(4){display: flex;justify-content: center;align-items: center;}
+.content>ul>li:nth-child(5){display: flex;justify-content: center;align-items: center;}
 .content>ul>li:nth-child(6){width: 50%;}
 .content>ul>li:nth-child(7){height: 620px;}
 .content>ul>li:nth-child(8){width: 50%;}
 .content>ul>li:nth-child(9){}
-.content>ul>li:nth-child(10){}
-.content>ul>li:nth-child(11){width: 50%;}
+.content>ul>li:nth-child(10){position: absolute;bottom: 0;right: 620px;}
+.content>ul>li:nth-child(11){width: 50%;position: absolute;right: 0;bottom: 0;}
+
+.content .icon{text-align: center;width: 150px;height: 150px;}
+.content .icon img{margin: 0 auto;margin-bottom: 10px;}
 
 /* pc */
 @media screen and ( min-width:700px ){
@@ -75,6 +85,7 @@ html,body{height: 100%;}
         width: 1240px;position: absolute;
         left: 50%;transform: translateX(-50%);bottom: 0;
     }
+
 
 }/* pc media end */
 
@@ -132,17 +143,17 @@ html,body{height: 100%;}
     }
 
     .content{width: 100%;}
-    .content>ul>li{width: 50%;}
+    .content>ul>li{width: 50%;order: 11;}
 
-    .content>ul>li:nth-child(1){}
-    .content>ul>li:nth-child(2){}
-    .content>ul>li:nth-child(3){}
-    .content>ul>li:nth-child(4){}
+    .content>ul>li:nth-child(1){order:-1;}
+    .content>ul>li:nth-child(2){order:2;}
+    .content>ul>li:nth-child(3){order:3;}
+    .content>ul>li:nth-child(4){order:1;}
+    .content>ul>li:nth-child(10){position: static;}
+    .content>ul>li:nth-child(11){position: static;}
     .content>ul>li:nth-child(5),
     .content>ul>li:nth-child(6),
     .content>ul>li:nth-child(7),
     .content>ul>li:nth-child(8),
-    .content>ul>li:nth-child(9),
-    .content>ul>li:nth-child(10),
-    .content>ul>li:nth-child(11){display: none;}
+    .content>ul>li:nth-child(9){display: none;}
 }/* mobile media end */
